[package]
name = "rust_game_review_lambda"
version = "0.1.0"
edition = "2024"

[dependencies]
interactive_process = "0.1.3"
lambda_runtime = "0.14.0"
serde_json = "1.0.140"
tokio = "1.45.1"

# I'd just used cargo add lambda_runtime, cargo add ... etc., for installing those three dependencies
# (lambda_runtime, serde_json, tokio)

# interactive_process for interacting with child processes